--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1415,15 +1415,15 @@ search_mldtl = select ml.id, journalCode, ml.subtypecode, subscriberNumber, subs
                  address, city, district, state, country, pincode, copies, volumeNumber, issue, month, `year`, startYear, \
                 left((select month from months where months.Id = startMonth), 3) as startMonth, endYear, \
                left((select month from months where months.Id = endMonth), 3) as endMonth, subscriber_type.subtype as subType \
-                 FROM mailing_list_detail ml, subscriber_type where mailinglistid = ? and ml.subtypecode = subscriber_type.subtypecode \
-                 and (miId = 0 or bilid = 0)
+                 FROM mailing_list_detail ml, subscriber_type where mailinglistid = ? and ml.subtypecode = subscriber_type.subtypecode
 
 
 get_ml_id = select id from mailing_list where journalId = (select id from journals where journals.journalName = ?) and \
              issue = ? and `year` = ? and month = (select id from months where months.month = ?)
 
 search_mldtl_ui = select journalCode, subtypecode, subscriberNumber, subscriberName, city, state, country, pincode, copies, volumeNumber, issue, month, `year` \
-                FROM mailing_list_detail where mailinglistid = ? and (miId = 0 or bilid = 0)
+                FROM mailing_list_detail where mailinglistid = ? and miId = 0 and bilid = 0
+
 #--------------------------------------------------------------------------
 # End Mailing List
 #--------------------------------------------------------------------------
