--- a/web/WEB-INF/classes/email_templates.properties
+++ b/web/WEB-INF/classes/email_templates.properties
@@ -32,7 +32,7 @@ prl_invoice = Dear Subscriber,\n\n\
 
 outstanding_payment = Dear Subscriber,\n\n\
                         Our records indicate that you have an outstanding balance of Indian rupees %s. We have yet to receive this payment. Please find a copy of the invoice enclosed.\n \
-                        If this amount has already been paid and sent, please disregard this notice and we apologize for any inconvenience. Otherwise, please forward us the amount stated above.\n\n \
+                        If this amount has already been paid, please disregard this notice and we apologize for any inconvenience. Otherwise, please forward us the amount stated above.\n\n \
                         Warm Regards,\n\
                         The Circulation Department\n\
                         Indian Academy Of Sciences
