update issue 210 backissue list - bug Fixes

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -1476,6 +1476,7 @@ generate_bil = select mailing_list.id, \
                         subscriptiondetails.startMonth, \
                         subscriptiondetails.endYear, \
                         subscriptiondetails.endMonth, \
+                        back_issue_list.volume_number, \
                         back_issue_list.issue_number, \
                         back_issue_list.month, \
                         back_issue_list.`year`, \
@@ -1494,6 +1495,7 @@ generate_bil = select mailing_list.id, \
                         left join districts on subscriber.district = districts.id \
                         where back_issue_list.`year` = mailing_list.`year` \
                        and back_issue_list.issue_number = mailing_list.issue \
+                        and back_issue_list.volume_number = mailing_list.volumeNumber \
                         and back_issue_list.month = mailing_list.month \
                         and back_issue_list.sent_to_subscriber = false \
                         and back_issue_list.subscription_detail_id = subscriptiondetails.id \
@@ -1504,11 +1506,11 @@ generate_bil = select mailing_list.id, \
 insert_mldtl_bil = insert into mailing_list_detail \
                     ( mailinglistId, subscriberId, subscriptionId, subscriptionDetailId, journalId, journalCode, \
                     subtypecode, subscriberNumber, subscriberName, department, institution, address, city, district, \
-                    state, country, pincode, copies, startYear, startMonth, endYear, endMonth, issue, month, \
+                    state, country, pincode, copies, startYear, startMonth, endYear, endMonth, volumeNumber, issue, month, \
                     `year`, bilid, bildate) \
                     VALUES \
                     ( ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, \
-                    ?, ?, ?, ? )
+                    ?, ?, ?, ?, ? )
 
 update_bil = update back_issue_list SET sent_to_subscriber = true, sent_on = curdate() WHERE Id = ?
 
@@ -1519,29 +1521,28 @@ search_bil = select mailing_list_detail.id, mailing_list_detail.journalCode, sub
                 mailing_list_detail.endYear, left((select month from months where months.Id = mailing_list_detail.endMonth), 3) as endMonth, \
                 subscriber_type.subtype as subType, mailing_list_detail.volumeNumber, journal_details.page_size \
                     FROM \
-                mailing_list_detail, subscriptiondetails, back_issue_list, subscriber_type, journals, journal_details \
+                mailing_list_detail, subscriptiondetails, back_issue_list, subscriber_type, journals, journal_details, journal_volume_details \
                 where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id and subscriptiondetails.active = '1' \
                 and mailing_list_detail.subtypecode = subscriber_type.subtypecode \
                 and mailing_list_detail.bilid = back_issue_list.id \
                 and  mailing_list_detail.startYear >= subscriptiondetails.startYear \
                 and mailing_list_detail.bilid <> ' ' and journal_details.journals_id = journals.id \
-                and mailing_list_detail.journalId = journals.id
+                and mailing_list_detail.journalId = journals.id \
+                 and journal_volume_details.journal_details_id = journal_details.id \
+                and mailing_list_detail.volumeNumber = journal_volume_details.volume_number
 
-search_bil_ui = select \
-            mailing_list_detail.journalCode, mailing_list_detail.subtypecode, mailing_list_detail.subscriberNumber, \
-            mailing_list_detail.subscriberName, \
-            mailing_list_detail.city, \
-            mailing_list_detail.state, mailing_list_detail.country, mailing_list_detail.pincode, mailing_list_detail.copies, \
-            mailing_list_detail.issue, \
-            mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.bildate, \
-            mailing_list_detail.volumeNumber, journal_details.page_size \
-            FROM \
-            mailing_list_detail, subscriptiondetails, back_issue_list, journals, journal_details \
-            where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id and subscriptiondetails.active = '1' \
-            and mailing_list_detail.bilid = back_issue_list.id \
-            and  mailing_list_detail.startYear >= subscriptiondetails.startYear \
-            and mailing_list_detail.bilid <> ' ' and journal_details.journals_id = journals.id \
-                and mailing_list_detail.journalId = journals.id
+search_bil_ui = select mailing_list_detail.journalCode, mailing_list_detail.subtypecode, \
+                mailing_list_detail.subscriberNumber, mailing_list_detail.subscriberName, \
+                mailing_list_detail.city, mailing_list_detail.state, mailing_list_detail.country, \
+                mailing_list_detail.pincode, mailing_list_detail.copies, mailing_list_detail.volumeNumber, mailing_list_detail.issue, \
+                mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.bildate, \
+                journal_details.page_size FROM mailing_list_detail, subscriptiondetails, back_issue_list, journals, journal_details, journal_volume_details \
+                where mailing_list_detail.subscriptionDetailId = subscriptiondetails.id \
+                and subscriptiondetails.active = '1' and mailing_list_detail.bilid = back_issue_list.id and \
+                mailing_list_detail.startYear >= subscriptiondetails.startYear and mailing_list_detail.bilid <> ' ' \
+                and journal_details.journals_id = journals.id and mailing_list_detail.journalId = journals.id \
+                and journal_volume_details.journal_details_id = journal_details.id \
+                and mailing_list_detail.volumeNumber = journal_volume_details.volume_number
 #--------------------------------------------------------------------------
 # End Back Issue List
 #--------------------------------------------------------------------------
