--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -552,7 +552,6 @@ search_subscriber = select t1.id as subscriberID,subscriberNumber, subscriberNam
 get_missing_issues_for_subscriber = SELECT t1.ID as id,\
                                         t3.INWARDNUMBER as inwardNumber,\
                                         t4.JOURNALNAME as journalName,\
-                                        t2.MONTH as month,\
                                         t2.`year`,\
                                         t2.MISSINGCOPIES as missingcopies,\
                                         t2.ACTION as action,\
@@ -605,30 +604,35 @@ get_subscription_for_subscriber =   SELECT t10.id, \
                                             sum(COALESCE(t12.amount, 0)) as payment, \
                                             (t10.amount + sum(COALESCE(t12.amount, 0))) AS amountPaid, \
                                             t10.receiptNumber \
-                                       FROM          (SELECT t1.id, \
-                                                             t4.id AS inwardID, \
-                                                             t4.inwardNumber, \
-                                                             DATE_FORMAT(t1.subscriptionDate, '%d/%m/%Y') \
-                                                                AS subscriptionDate, \
-                                                             sum(t2.copies * t5.rate) AS subscriptionTotal, \
-                                                             t1.legacy, \
-                                                             t6.currency, \
-                                                             t4.chqddNumber, \
-                                                             t4.amount, \
-                                                             t4.receiptNumber \
-                                                        FROM subscription t1, \
-                                                             subscriptiondetails t2, \
-                                                             subscriber t3, \
-                                                             inward t4, \
-                                                             subscription_rates t5, \
-                                                             currency t6 \
-                                                       WHERE     t1.id = t2.subscriptionID \
-                                                             AND t1.subscriberID = t3.id \
-                                                             AND t1.inwardID = t4.id \
-                                                             AND t2.journalPriceGroupID = t5.id \
-                                                             AND t4.currency = t6.id \
-                                                             AND t3.subscriberNumber = ? \
-                                                      GROUP BY t1.id) t10 \
+                                       FROM          (SELECT t4.id, \
+                                                            t5.id AS inwardID, \
+                                                            t5.inwardNumber, \
+                                                            t4.subscriptionDate, \
+                                                            t4.subscriptionTotal, \
+                                                            t4.legacy, \
+                                                            t6.currency, \
+                                                            t5.chqddNumber, \
+                                                            t5.amount, \
+                                                            t5.receiptNumber \
+                                                       FROM (SELECT t1.id, \
+                                                                    DATE_FORMAT(t1.subscriptionDate, '%d/%m/%Y') \
+                                                                       AS subscriptionDate, \
+                                                                    sum(t2.copies * t5.rate) AS subscriptionTotal, \
+                                                                    t1.legacy, \
+                                                                    t1.inwardID \
+                                                               FROM subscription t1, \
+                                                                    subscriptiondetails t2, \
+                                                                    subscriber t3, \
+                                                                    subscription_rates t5 \
+                                                              WHERE     t1.id = t2.subscriptionID \
+                                                                    AND t1.subscriberID = t3.id \
+                                                                    AND t2.journalPriceGroupID = t5.id \
+                                                                    AND t3.subscriberNumber = ? \
+                                                             GROUP BY t1.id) t4 \
+                                                            LEFT JOIN inward t5 \
+                                                               ON t4.inwardID = t5.id \
+                                                            LEFT JOIN currency t6 \
+                                                               ON t5.currency = t6.id) t10 \
                                                   LEFT JOIN \
                                                      invoice t11 \
                                                   ON t10.id = t11.subscriptionId \
