--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1518,7 +1518,7 @@ insert_mldtl_bil = insert into mailing_list_detail \
 
 update_bil = update back_issue_list SET sent_to_subscriber = true, sent_on = curdate() WHERE Id = ?
 
-search_bil = select mailing_list_detail.id, mailing_list_detail.journalCode, subscriber_type.subtypecode, subscriberNumber, subscriberName, department , institution, \
+search_bil = select mailing_list_detail.id, mailing_list_detail.subscriptionId, mailing_list_detail.journalCode, subscriber_type.subtypecode, subscriberNumber, subscriberName, department , institution, \
                 address, city, district, state, country, pincode, mailing_list_detail.copies, mailing_list_detail.issue, \
                 mailing_list_detail.month, mailing_list_detail.`year`, mailing_list_detail.startYear, \
                 left((select month from months where months.Id = mailing_list_detail.startMonth), 3) as startMonth, \
@@ -1535,7 +1535,7 @@ search_bil = select mailing_list_detail.id, mailing_list_detail.journalCode, sub
                  and journal_volume_details.journal_details_id = journal_details.id \
                 and mailing_list_detail.volumeNumber = journal_volume_details.volume_number
 
-search_bil_ui = select mailing_list_detail.journalCode, mailing_list_detail.subtypecode, \
+search_bil_ui = select mailing_list_detail.subscriptionId, mailing_list_detail.journalCode, mailing_list_detail.subtypecode, \
                 mailing_list_detail.subscriberNumber, mailing_list_detail.subscriberName, \
                 mailing_list_detail.city, mailing_list_detail.state, mailing_list_detail.country, \
                 mailing_list_detail.pincode, mailing_list_detail.copies, mailing_list_detail.volumeNumber, mailing_list_detail.issue, \
