corr and subscription comparison fixes added subscription_legacy table

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -401,7 +401,10 @@ search_subscriber_inward = SELECT t1.id, \
                                 DATE_FORMAT(ackDate, '%d/%m/%Y') AS ackDate, \
                                 t1.completed, \
                                 t1.chequeDDReturn, \
-                                t1.chqddNumber \
+                                t1.chqddNumber, \
+                                DATE_FORMAT(t1.paymentDate, '%d/%m/%Y') AS chqDate, \
+                                t1.receiptNumber, \
+                                t1.receiptDate \
                            FROM inward t1 \
                                 LEFT JOIN inward_purpose t3 \
                                    ON t1.inwardPurpose = t3.id \
@@ -603,7 +606,8 @@ get_subscription_for_subscriber =   SELECT t10.id, \
                                             t10.amount AS inwardAmount, \
                                             sum(COALESCE(t12.amount, 0)) as payment, \
                                             (t10.amount + sum(COALESCE(t12.amount, 0))) AS amountPaid, \
-                                            t10.receiptNumber \
+                                            t10.receiptNumber, \
+                                            t10.receiptDate \
                                        FROM          (SELECT t4.id, \
                                                             t5.id AS inwardID, \
                                                             t5.inwardNumber, \
@@ -613,22 +617,30 @@ get_subscription_for_subscriber =   SELECT t10.id, \
                                                             t6.currency, \
                                                             t5.chqddNumber, \
                                                             t5.amount, \
-                                                            t5.receiptNumber \
-                                                       FROM (SELECT t1.id, \
-                                                                    DATE_FORMAT(t1.subscriptionDate, '%d/%m/%Y') \
-                                                                       AS subscriptionDate, \
-                                                                    sum(t2.copies * t5.rate) AS subscriptionTotal, \
-                                                                    t1.legacy, \
-                                                                    t1.inwardID \
-                                                               FROM subscription t1, \
-                                                                    subscriptiondetails t2, \
-                                                                    subscriber t3, \
-                                                                    subscription_rates t5 \
-                                                              WHERE     t1.id = t2.subscriptionID \
-                                                                    AND t1.subscriberID = t3.id \
-                                                                    AND t2.journalPriceGroupID = t5.id \
-                                                                    AND t3.subscriberNumber = ? \
-                                                             GROUP BY t1.id) t4 \
+                                                            t5.receiptNumber, \
+                                                            DATE_FORMAT(t5.receiptDate, '%d/%m/%Y') as receiptDate \
+                                                       FROM (SELECT t20.id, \
+                                                                    t20.subscriptionDate, \
+                                                                    t20.subscriptionTotal, \
+                                                                    t20.inwardID, \
+                                                                    COALESCE(t21.legacy, 0) as legacy \
+                                                               FROM    (SELECT t1.id, \
+                                                                               DATE_FORMAT(t1.subscriptionDate, '%d/%m/%Y') \
+                                                                                  AS subscriptionDate, \
+                                                                               sum(t2.copies * t5.rate) AS subscriptionTotal, \
+                                                                               t1.inwardID \
+                                                                          FROM subscription t1, \
+                                                                               subscriptiondetails t2, \
+                                                                               subscriber t3, \
+                                                                               subscription_rates t5 \
+                                                                         WHERE     t1.id = t2.subscriptionID \
+                                                                               AND t1.subscriberID = t3.id \
+                                                                               AND t2.journalPriceGroupID = t5.id \
+                                                                               AND t3.subscriberNumber = ? \
+                                                                        GROUP BY t1.id) t20 \
+                                                                    LEFT JOIN \
+                                                                       subscription_legacy t21 \
+                                                                    ON t20.id = t21.subscription_id) t4 \
                                                             LEFT JOIN inward t5 \
                                                                ON t4.inwardID = t5.id \
                                                             LEFT JOIN currency t6 \
@@ -681,7 +693,7 @@ get_subscription_detail_by_subscription_id =    select t2.id \
                                 , t3.journalGroupName as journalGroupName \
                                 , t2.journalGroupID \
                                 , t2.startYear \
-                                , t2.startMonth \
+                                , MONTHNAME(STR_TO_DATE(t2.startMonth, '%m')) as startMonth \
                                 , t2.endYear \
                                 , t2.copies \
                                 , (t2.copies * t4.rate) as total \
@@ -745,7 +757,7 @@ get_subscription_details =  SELECT \
                                 t1.journalPriceGroupID, \
                                 t3.period, \
                                 t3.rate, \
-                                t1.startMonth, \
+                                MONTHNAME(STR_TO_DATE(t1.startMonth, '%m')) as startMonth, \
                                 t1.journalGroupID \
                               FROM \
                                 subscriptiondetails t1, \
