--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -693,7 +693,7 @@ get_subscription_detail_by_subscription_id =    select t2.id \
                                 , t3.journalGroupName as journalGroupName \
                                 , t2.journalGroupID \
                                 , t2.startYear \
-                                , MONTHNAME(STR_TO_DATE(t2.startMonth, '%m')) as startMonth \
+                                , t2.startMonth \
                                 , t2.endYear \
                                 , t2.copies \
                                 , (t2.copies * t4.rate) as total \
