--- a/JDSMigration/nbproject/project.properties
+++ b/JDSMigration/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=JDSMigration
-application.vendor=Shailendra Mahapatra
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,21 +24,20 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/JDSMigration.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
 file.reference.jxl.jar=lib\\jxl.jar
 file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
-file.reference.mail.jar=lib/javamail-1.4.4/mail.jar
+file.reference.mail.jar=lib\\javamail-1.4.4\\mail.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=lib\\mysql-connector-java-5.1.18-bin.jar
-file.reference.smtp.jar=lib/javamail-1.4.4/smtp.jar
+file.reference.simple-java-mail-2.0.jar=lib\\simple-java-mail-2.0.jar
+file.reference.smtp.jar=lib\\javamail-1.4.4\\smtp.jar
 includes=**
-jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
-jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${file.reference.log4j-1.2.16.jar}:\
     ${file.reference.jxl.jar}:\
+    ${file.reference.log4j-1.2.16.jar}:\
+    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
+    ${file.reference.simple-java-mail-2.0.jar}:\
     ${file.reference.mail.jar}:\
     ${file.reference.smtp.jar}
 # Space-separated list of extra javac options
@@ -65,15 +63,6 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-jnlp.codebase.type=no.codebase
-jnlp.descriptor=application
-jnlp.enabled=false
-jnlp.mixed.code=default
-jnlp.offline-allowed=false
-jnlp.signed=false
-jnlp.signing=
-jnlp.signing.alias=
-jnlp.signing.keystore=
 main.class=JDSMigration.JDSMigrate
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
@@ -82,10 +71,10 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-Xmx2048m
+# Space-separated list of JVM arguments used when running the project.
+# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
+# To set system properties for unit tests define test-sys-prop.name=value:
+run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
