--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -593,70 +593,76 @@ get_first_subscriber_number = select subscriberNumber from subscriber where id =
 # Subscription
 #--------------------------------------------------------------------------
 get_subscription_for_subscriber =   SELECT t10.id, \
-                                            t10.inwardNumber, \
-                                            t10.inwardID, \
-                                            t10.subscriptionDate, \
-                                            t10.subscriptionTotal, \
-                                            t10.legacy, \
-                                            t10.currency, \
-                                            (subscriptionTotal - (t10.amount + sum(COALESCE(t12.amount, 0)))) \
-                                               AS balance, \
-                                            t14.agentName, \
-                                            t10.chqddNumber, \
-                                            t10.amount AS inwardAmount, \
-                                            sum(COALESCE(t12.amount, 0)) as payment, \
-                                            (t10.amount + sum(COALESCE(t12.amount, 0))) AS amountPaid, \
-                                            t10.receiptNumber, \
-                                            t10.receiptDate \
-                                       FROM          (SELECT t4.id, \
-                                                            t5.id AS inwardID, \
-                                                            t5.inwardNumber, \
-                                                            t4.subscriptionDate, \
-                                                            t4.subscriptionTotal, \
-                                                            t4.legacy, \
-                                                            t6.currency, \
-                                                            t5.chqddNumber, \
-                                                            t5.amount, \
-                                                            t5.receiptNumber, \
-                                                            DATE_FORMAT(t5.receiptDate, '%d/%m/%Y') as receiptDate \
-                                                       FROM (SELECT t20.id, \
-                                                                    t20.subscriptionDate, \
-                                                                    t20.subscriptionTotal, \
-                                                                    t20.inwardID, \
-                                                                    COALESCE(t21.legacy, 0) as legacy \
-                                                               FROM    (SELECT t1.id, \
-                                                                               DATE_FORMAT(t1.subscriptionDate, '%d/%m/%Y') \
-                                                                                  AS subscriptionDate, \
-                                                                               sum(t2.copies * t5.rate) AS subscriptionTotal, \
-                                                                               t1.inwardID \
-                                                                          FROM subscription t1, \
-                                                                               subscriptiondetails t2, \
-                                                                               subscriber t3, \
-                                                                               subscription_rates t5 \
-                                                                         WHERE     t1.id = t2.subscriptionID \
-                                                                               AND t1.subscriberID = t3.id \
-                                                                               AND t2.journalPriceGroupID = t5.id \
-                                                                               AND t3.subscriberNumber = ? \
-                                                                        GROUP BY t1.id) t20 \
-                                                                    LEFT JOIN \
-                                                                       subscription_legacy t21 \
-                                                                    ON t20.id = t21.subscription_id) t4 \
-                                                            LEFT JOIN inward t5 \
-                                                               ON t4.inwardID = t5.id \
-                                                            LEFT JOIN currency t6 \
-                                                               ON t5.currency = t6.id) t10 \
-                                                  LEFT JOIN \
-                                                     invoice t11 \
-                                                  ON t10.id = t11.subscriptionId \
-                                               LEFT JOIN \
-                                                  payment t12 \
-                                               ON t11.id = t12.invoice_id \
-                                            LEFT JOIN \
-                                               (inward_agent_details t13, agents t14) \
-                                            ON t10.inwardID AND t13.agentID = t14.id \
-                                     GROUP BY t10.id \
-                                     ORDER BY t10.id DESC
-
+                                        t10.inwardNumber, \
+                                        t10.inwardID, \
+                                        t10.subscriptionDate, \
+                                        t10.subscriptionTotal, \
+                                        t10.legacy, \
+                                        t10.currency, \
+                                        (  subscriptionTotal \
+                                         - (COALESCE(t10.amount, 0) + sum(COALESCE(t12.amount, 0)))) \
+                                           AS balance, \
+                                        COALESCE(t10.legacy_balance, 0) as legacy_balance, \
+                                        t14.agentName, \
+                                        t10.chqddNumber, \
+                                        t10.amount AS inwardAmount, \
+                                        sum(COALESCE(t12.amount, 0)) AS payment, \
+                                        (t10.amount + sum(COALESCE(t12.amount, 0))) AS amountPaid, \
+                                        t10.receiptNumber, \
+                                        t10.receiptDate \
+                                   FROM          (SELECT t4.id, \
+                                                         t5.id AS inwardID, \
+                                                         t5.inwardNumber, \
+                                                         t4.subscriptionDate, \
+                                                         t4.subscriptionTotal, \
+                                                         t4.legacy, \
+                                                         t4.legacy_balance, \
+                                                         t6.currency, \
+                                                         t5.chqddNumber, \
+                                                         t5.amount, \
+                                                         t5.receiptNumber, \
+                                                         DATE_FORMAT(t5.receiptDate, '%d/%m/%Y') \
+                                                            AS receiptDate \
+                                                    FROM (SELECT t20.id, \
+                                                                 t20.subscriptionDate, \
+                                                                 t20.subscriptionTotal, \
+                                                                 t20.inwardID, \
+                                                                 COALESCE(t21.legacy, 0) AS legacy, \
+                                                                 t21.legacy_balance \
+                                                            FROM    (SELECT t1.id, \
+                                                                            DATE_FORMAT(t1.subscriptionDate, \
+                                                                                        '%d/%m/%Y') \
+                                                                               AS subscriptionDate, \
+                                                                            sum(t2.copies * t5.rate) \
+                                                                               AS subscriptionTotal, \
+                                                                            t1.inwardID \
+                                                                       FROM subscription t1, \
+                                                                            subscriptiondetails t2, \
+                                                                            subscriber t3, \
+                                                                            subscription_rates t5 \
+                                                                      WHERE     t1.id = t2.subscriptionID \
+                                                                            AND t1.subscriberID = t3.id \
+                                                                            AND t2.journalPriceGroupID = t5.id \
+                                                                            AND t3.subscriberNumber = ? \
+                                                                     GROUP BY t1.id) t20 \
+                                                                 LEFT JOIN \
+                                                                    subscription_legacy t21 \
+                                                                 ON t20.id = t21.subscription_id) t4 \
+                                                         LEFT JOIN inward t5 \
+                                                            ON t4.inwardID = t5.id \
+                                                         LEFT JOIN currency t6 \
+                                                            ON t5.currency = t6.id) t10 \
+                                              LEFT JOIN \
+                                                 invoice t11 \
+                                              ON t10.id = t11.subscriptionId \
+                                           LEFT JOIN \
+                                              payment t12 \
+                                           ON t11.id = t12.invoice_id \
+                                        LEFT JOIN \
+                                           (inward_agent_details t13, agents t14) \
+                                        ON t10.inwardID AND t13.agentID = t14.id \
+                                 GROUP BY t10.id \
+                                 ORDER BY t10.id DESC
 
 get_subscription_info_by_id =   SELECT t6.ID, \
                                         t6.INWARDNUMBER AS inwardNumber, \
