Removed hard-coding of 2012 for RESO. Some subscriptions were not getting inserted because of the way end year was calculated for RESO and CURR. Where-ever a subscriber or subscription is not being inserted, changed the logging to fatal. Also added the row no in the file, so that debugging is easy. Start of migration was failing after database changes for balance. Corrected that.

--- a/JDSMigration/log4j.properties
+++ b/JDSMigration/log4j.properties
@@ -30,7 +30,7 @@ log4j.logger.JDSMigration.migrateHONFEL=FATAL
 log4j.logger.JDSMigration.migrateJGRANT=FATAL
 log4j.logger.JDSMigration.migrateRES=FATAL
 log4j.logger.JDSMigration.migrateCURR=FATAL
-log4j.logger.JDSMigration.MigrationBase.getCityID=DEBUG, cities
+log4j.logger.JDSMigration.MigrationBase.getCityID=FATAL, cities
 
 # Appender "stdout" settings
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
